2025-05-25T01:02:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15232670365 # 654
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-25
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 187 253 / 188 254
* notice: next accum: outdated-unq outdated-all / unq all: 188 254 / 189 255
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-27] / [2025-05-24]

2025-04-28T00:57:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14697990691 # 627
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 185 251 / 187 253
* notice: next accum: outdated-unq outdated-all / unq all: 187 253 / 188 254
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-30] / [2025-04-27]

2025-04-06T00:57:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14287436280 # 605
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-06
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 184 250 / 187 253
* notice: next accum: outdated-unq outdated-all / unq all: 185 251 / 187 253
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-22] / []

2025-04-01T01:00:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14184666180 # 600