@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2025-05-25T01:02:28Z",
+  "timestamp" : "2025-06-07T00:57:16Z",
   "count_outdated" : 254,
   "uniques_outdated" : 188,
-  "count" : 255,
-  "uniques" : 189,
+  "count" : 257,
+  "uniques" : 190,
   "clones" : [
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-06T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
